--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "nodemailer": "^6.9.15",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.2.29"
+    "typeorm": "^0.2.29",
+    "typeorm-pagination": "^2.0.3"
   }
 }
