--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.8",
