--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/ioredis": "^4.28.10",
     "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.7.1",
     "@types/nodemailer": "^6.4.16",
+    "@types/redis": "^4.0.10",
     "@typescript-eslint/eslint-plugin": "^8.7.0",
     "@typescript-eslint/parser": "^8.7.0",
     "eslint": "^9.11.1",
@@ -44,10 +46,12 @@
     "express": "^4.21.0",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.8",
+    "ioredis": "^4.28.5",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "pg": "^8.13.0",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.2.29",
     "typeorm-pagination": "^2.0.3"
