--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "pg": "^8.13.0",
+    "rate-limiter-flexible": "^5.0.3",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.2.29",
