Adicionando aws-sdk-ses, para enviou de email pela aws

--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "typescript-eslint": "^8.7.0"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.665.0",
+    "@aws-sdk/credential-provider-node": "^3.665.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.3",
     "class-transformer": "^0.5.1",
