--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript-eslint": "^8.7.0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.665.0",
     "@aws-sdk/client-ses": "^3.665.0",
     "@aws-sdk/credential-provider-node": "^3.665.0",
     "bcryptjs": "^2.4.3",
@@ -50,6 +51,7 @@
     "handlebars": "^4.7.8",
     "ioredis": "^4.28.5",
     "jsonwebtoken": "^9.0.2",
+    "mime": "^2.5.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "pg": "^8.13.0",
